--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <html>
 	<head>
 		<title>twas capstone project</title>
-        <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +26,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<a href="https://github.com/jacquelinekclee/twas-dsc180-a17" style="font-size:150%";> DSC 180 Capstone: Application of Transcriptome-Wide Association Studies to Find Genes that are Associated with Inflammatory Bowel Disease</a>
+								<a href="https://github.com/jacquelinekclee/twas-dsc180-a17" style="font-size:200%, color: rgba(255, 255, 255, 0.89)";> DSC 180 Capstone: Application of Transcriptome-Wide Association Studies to Find Genes that are Associated with Inflammatory Bowel Disease</a>
 								<style>
 									
 								</style>
@@ -190,6 +189,7 @@
 			<div id="bg"></div>
 
 		<!-- Scripts -->
+            <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
