--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 					<header id="header">
 						<div class="logo">
 							<div class="container">
-								<span class="icon fa-dna"></span>
+								<span style="color: rgb(198,146,20)", class="icon fa-dna"></span>
 							</div>
 						</div>
 						<div class="content">
 							<div class="inner">
-								<a href="https://github.com/jacquelinekclee/twas-dsc180-a17" style="font-size:200%, color: rgba(255, 255, 255, 0.89)";> DSC 180 Capstone: Application of Transcriptome-Wide Association Studies to Find Genes that are Associated with Inflammatory Bowel Disease</a>
+								<a href="https://github.com/jacquelinekclee/twas-dsc180-a17" style="font-size:200%, color: rgb(198,146,20)";> DSC 180 Capstone: Application of Transcriptome-Wide Association Studies to Find Genes that are Associated with Inflammatory Bowel Disease</a>
 								<style>
 									
 								</style>
 								<br>
-								<h2 style="color: rgba(255, 255, 255, 0.89);"> Team Members: Esha Desai | Jacqueline Lee | Moksha Poladi | Samuel Zhou</h2>
+								<h2 style="color: rgba(255, 255, 255, 0.89);"> Esha Desai | Jacqueline Lee | Moksha Poladi | Samuel Zhou</h2>
 								<p  style="color: rgba(255, 255, 255, 0.89);">Understanding how genetic variation impacts gene expression can help us identify gene-based mechanisms of disease risk. For the last two decades, genome-wide association studies (GWAS) were utilized to identify disease-associated genetic variants. However, these associated variants often do not lie in gene exons, creating uncertainty as to which genes are associated with disease. Our project aims to fill this gap by leveraging a technique known as transcriptome-wide association studies (TWAS). TWAS is a powerful strategy that can detect gene–trait associations if variation in the expression of a gene colocalizes with phenotypic variation. It combines expression quantitative trait locus (eQTL) data with GWAS summary statistics to identify disease-associated genes. We leverage gene expression and genotype data from the 1000 Genomes project and GWAS from UK Biobank. Here, we focused our analysis on Inflammatory Bowel Disease. Ultimately, the identification of disease-associated genes will accelerate the development of therapeutics and treatment options for patients.
 								</p>
 							</div>
@@ -64,7 +64,7 @@
 									  margin-left: auto;
 									  margin-right: auto;
 									}
-									</style>
+								</style>
 								<p> As seen above, the diseased population may have one variant of DNA (AA), and the non-diseased population may have a different one (AT). The AA in the diseased population's DNA may lead to increased transcripts of a particular gene, which in turns leads to the presence of the disease. Identifying these gene-based mechanism of disease risk is crucial to facilitate early diagnosis and treatment of individuals. Previous approaches attempted to understand this mechanism by detecting key variants associated with gene expression, which in turn is responsible for regulating the production of certain key proteins that can lead to the presence of certain diseases<sup>1</sup>. For example, GWAS finds thousands of trait-associated variants, however, 93% of disease and trait-associated variants emerging from these studies lie within noncoding sequences of the DNA<sup>2</sup>.  It is infeasible to measure gene expression in as many people that are in a GWAS cohort. This also makes it difficult to understand the functionality of these variants and their association with disease risk.
 								</p>
                                 
@@ -111,8 +111,23 @@
                                 </p>
 								<p>As seen above, first the genotype data is extracted with Plink. Then this extracted data, the gene expression data, and the population data are fed into the TWAS/FUSION software to calculate model weights for each gene, where heritability of each feature is estimated. The models used are the linear model that regresses SNPs on gene expression, Lasso Regularization, and ElasticNet, as seen below:
 								</p>
-                        $$\text{gene\:expression}_i = \mathlarger{\mathlarger{\sum}}_j\beta_j * \text{SNP}_{i,j}$$
-                        <p>These model weights are compared with the GWAS summary statistics for IBD and linearly combined to create a standardize Z-score: $\frac{WZ}{{(W\sum_{s,s}W^t)}^{\frac{1}{2}}}$. $W$ are the weights, $Z$ is the vector of z-scores from Equation \ref{model} where SNPs are used, $\sum_{s,s}$ is the covariance matrix among all SNPs (linkage disequilibrium). These Z-scores are used to find p-values and identify significant associations between genes and IBD.
+                        <span class="center"><img src="images/equation.png" alt="" width="100%"/></span>
+								<style>
+									img {
+									  display: block;
+									  margin-left: auto;
+									  margin-right: auto;
+									}
+								</style>
+                        <p>These model weights are compared with the GWAS summary statistics for IBD and linearly combined to create a standardize Z-score, whose equation is seene below. These Z-scores are used to find p-values and identify significant associations between genes and IBD.
+                        <span class="center"><img src="images/zscore.png" alt="" width="100%"/></span>
+                            <style>
+                                img {
+                                  display: block;
+                                  margin-left: auto;
+                                  margin-right: auto;
+                                }
+                            </style>
                         </p>
                         </article>
 						<!-- Results -->
@@ -189,7 +204,6 @@
 			<div id="bg"></div>
 
 		<!-- Scripts -->
-            <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
