--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<a href="https://github.com/jacquelinekclee/twas-dsc180-a17" style="font-size:200%, color: rgb(198,146,20)";> DSC 180 Capstone: Application of Transcriptome-Wide Association Studies to Find Genes that are Associated with Inflammatory Bowel Disease</a>
+								<a href="https://github.com/jacquelinekclee/twas-dsc180-a17" style="color: rgb(198,146,20)"> <h1>DSC 180 Capstone: Application of Transcriptome-Wide Association Studies to Find Genes that are Associated with Inflammatory Bowel Disease</h1></a>
 								<style>
 									
 								</style>
@@ -111,7 +111,7 @@
                                 </p>
 								<p>As seen above, first the genotype data is extracted with Plink. Then this extracted data, the gene expression data, and the population data are fed into the TWAS/FUSION software to calculate model weights for each gene, where heritability of each feature is estimated. The models used are the linear model that regresses SNPs on gene expression, Lasso Regularization, and ElasticNet, as seen below:
 								</p>
-                        <span class="center"><img src="images/equation.png" alt="" width="100%"/></span>
+                        <span class="center"><img src="images/equation.png" alt="" width="500%"/></span>
 								<style>
 									img {
 									  display: block;
@@ -119,8 +119,8 @@
 									  margin-right: auto;
 									}
 								</style>
-                        <p>These model weights are compared with the GWAS summary statistics for IBD and linearly combined to create a standardize Z-score, whose equation is seene below. These Z-scores are used to find p-values and identify significant associations between genes and IBD.
-                        <span class="center"><img src="images/zscore.png" alt="" width="100%"/></span>
+                        <p>These model weights are compared with the GWAS summary statistics for IBD and linearly combined to create a standardize Z-score, whose equation is seen below. These Z-scores are used to find p-values and identify significant associations between genes and IBD.
+                        <span class="center"><img src="images/zscore.png" alt="" width="50%"/></span>
                             <style>
                                 img {
                                   display: block;
