--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 									
 								</style>
 								<br>
-                                <h2 style="color: rgba(255, 255, 255, 0.89);"> <a href="mailto:eadesai@ucsd.edu" <u>Esha Desai</u> <a> | <a href="mailto:jkl001@ucsd.edu" <u>Jacqueline Lee</u> </a> | <a href="mailto:mpoladi@ucsd.edu" <u>Moksha Poladi</u> </a> | <a href="mailto:szhou@ucsd.edu" <u>Samuel Zhou</u> </a> </h2>
+                                <h2 style="color: rgba(255, 255, 255, 0.89);"> <a href="mailto:eadesai@ucsd.edu" <u>Esha Desai</u> </a> | <a href="mailto:jkl001@ucsd.edu" <u>Jacqueline Lee</u> </a> | <a href="mailto:mpoladi@ucsd.edu" <u>Moksha Poladi</u> </a> | <a href="mailto:szhou@ucsd.edu" <u>Samuel Zhou</u> </a> </h2>
 								<p  style="color: rgba(255, 255, 255, 0.89);">Understanding how genetic variation impacts gene expression can help us identify gene-based mechanisms of disease risk. For the last two decades, genome-wide association studies (GWAS) were utilized to identify disease-associated genetic variants. However, these associated variants often do not lie in gene exons, creating uncertainty as to which genes are associated with disease. Our project aims to fill this gap by leveraging a technique known as transcriptome-wide association studies (TWAS). TWAS is a powerful strategy that can detect gene–trait associations if variation in the expression of a gene colocalizes with phenotypic variation. It combines expression quantitative trait locus (eQTL) data with GWAS summary statistics to identify disease-associated genes. We leverage gene expression and genotype data from the 1000 Genomes project and GWAS from UK Biobank. Here, we focused our analysis on Inflammatory Bowel Disease. Ultimately, the identification of disease-associated genes will accelerate the development of therapeutics and treatment options for patients.
 								</p>
 
                                 <p  style="color: rgba(255, 255, 255, 0.89);"> Click on the boxes below to navigate through our project!
 								</p>
-<nav >
+<nav class = "test">
     <h2 style="color: rgba(255, 255, 255, 0.89); text-align:center"> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em;" href="#intro" <u>Introduction/Background</u> <a> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em;" href="#work" <u>Methods and Data</u> </a> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em;" href="#results" <u>Results</u> </a> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em;" href="#concl" <u>Conclusion</u> </a> </h2>
 <!-- 							<ol>
 								<li><a style="color: rgba(255, 255, 255, 0.89);" href="#intro">Introduction/Background</a></li>
