--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <p  style="color: rgba(255, 255, 255, 0.89);"> Click on the boxes below to navigate through our project!
 								</p>
 <nav class>
-    <h2 style="color: rgba(255, 255, 255, 0.89); text-align:center"> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em;" href="#intro" <u>Introduction/Background</u> <a> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em;" href="#work" <u>Methods and Data</u> </a> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em;" href="#results" <u>Results</u> </a> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em;" href="#concl" <u>Conclusion</u> </a> </h2>
+    <h2 style="color: rgba(255, 255, 255, 0.89)"> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em; text-align:center" href="#intro" <u>Introduction/Background</u> <a> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em; text-align:center" href="#work" <u>Methods and Data</u> </a> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em; text-align:center" href="#results" <u>Results</u> </a> <a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em; text-align:center" href="#concl" <u>Conclusion</u> </a> </h2>
 <!-- 							<ol>
 								<li><a style="color: rgba(255, 255, 255, 0.89);" href="#intro">Introduction/Background</a></li>
 								<li><a style="color: rgba(255, 255, 255, 0.89);" href="#work">Methods and Data</a></li>
