--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- 					</header> -->
 
 				<!-- Main -->
-					<div id="main">
+<!-- 					<div id="main"> -->
 
 						<!-- Intro -->
 							<article id="intro">
@@ -194,7 +194,7 @@
 
 							</article>
 
-					</div>
+<!-- 					</div> -->
 
 				<!-- Footer -->
 					<footer id="footer">
