--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 							</div>
 						</div>
                         
-                        <p  style="color: rgba(255, 255, 255, 0.89);"> Click on the boxes below to navigate through our project!
+                        <p  style="color: rgba(255, 255, 255;"> Click on the boxes below to navigate through our project!
 								</p>
 
-									<h4 style="color: rgba(255, 255, 255, 0.89)"> 
+									<h4 style="color: rgb(255, 255, 255)"> 
 										<a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em; text-align:center" href="#intro"> <u>Introduction/Background</u> </a> 
 										<a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em; text-align:center" href="#work"> <u>Methods and Data</u> </a> 
 										<a style="border-width:3px; border-style:solid; border-color:rgb(198,146,20); padding: 1em; text-align:center" href="#results"> <u>Results</u> </a> 
