--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<a href="https://github.com/jacquelinekclee/twas-dsc180-a17" style="color: rgb(198,146,20)"> <h1>DSC 180 Capstone: Application of Transcriptome-Wide Association Studies to Find Genes that are Associated with Inflammatory Bowel Disease</h1></a>
+								<a href="https://github.com/jacquelinekclee/twas-dsc180-a17" style="color: rgb(198,146,20)"> <h1><u>DSC 180 Capstone: Application of Transcriptome-Wide Association Studies to Find Genes that are Associated with Inflammatory Bowel Disease</u></h1></a>
 								<style>
 									
 								</style>
