--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 </p>
 								<p>As seen above, first the genotype data is extracted with Plink. Then this extracted data, the gene expression data, and the population data are fed into the TWAS/FUSION software to calculate model weights for each gene, where heritability of each feature is estimated. The models used are the linear model that regresses SNPs on gene expression, Lasso Regularization, and ElasticNet, as seen below:
 								</p>
-                        <span class="center"><img src="images/equation.png" alt="" width="50%" style="background-color:white;"></span>
+                        <span class="center"><img src="images/equation-2.jpg" alt="" width="50%" style="background-color:white;"></span>
 								<style>
 									img {
 									  display: block;
